--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,3 +45,5 @@ overflow-checks = true
 
 [patch.crates-io]
 liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }
+tari_crypto = { git = "https://github.com/AaronFeickert/tari-crypto", branch = "scalar-byte-array" } # TODO: remove after merging
+tari_utilities = { git = "https://github.com/AaronFeickert/tari_utilities", branch = "byte-array" } # TODO: remove after merging
