--- a/comms/dht/Cargo.toml
+++ b/comms/dht/Cargo.toml
@@ -21,6 +21,7 @@ tari_common_sqlite = { path = "../../common_sqlite" }
 
 anyhow = "1.0.53"
 bitflags = "1"
+blake2 = "0.10"
 chacha20 = "0.7.1"
 chacha20poly1305 = "0.10.1"
 chrono = { version = "0.4.19", default-features = false }
