--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,4 +45,4 @@ overflow-checks = true
 
 [patch.crates-io]
 liblmdb-sys = { git = "https://github.com/tari-project/lmdb-rs", tag = "0.7.6-tari.1" }
-tari_crypto = { git = "https://github.com/AaronFeickert/tari-crypto", branch = "scalar-byte-array" } # TODO: remove after merging
+tari_crypto = { git = "https://github.com/tari-project/tari-crypto", branch = "main" } # TODO: remove after new release version
